<resources>
    <string name="app_name">Material Design</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>

    <string name="title_messages">Messages</string>
    <string name="title_friends">Friends</string>
    <string name="title_home">Home</string>

    <!-- Login Screen-->
    <string name="dont_have_an_account_text">Don\'t have an account yet?</string>
    <string name="sign_up_text">&#160; Sign Up</string>
    <string name="by_registering">By registering, I accept the &#160;</string>
    <string name="terms_service">Terms of Service</string>
    <string name="and">and the &#160;</string>
    <string name="privacy_policy">Privacy Policy.</string>
    <string name="sign_in">SIGN IN</string>
    <string name="username_text">Email</string>
    <string name="password_text">Password</string>
    <string name="facebook_button_description">Login with Facebook button</string>
    <string name="google_plus_description">Login with Google button</string>
    <string name="hello_world">Hello world!</string>

    <!-- Parent Sign Up-->
    <string name="title_activity_parent_sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_repeat">Repeat Password</string>
    <string name="parent_sign_up_heading">Parent</string>
    
    <!-- Error Strings-->
    <string name="phone_number_already_exists">This phone number already exists!</string>
    <string name="email_already_exist">This email already exists!</string>
    <string name="wrong_phone_number">Enter 10 digit phone number</string>
    <string name="wrong_email">Enter a correct email address</string>
    <string name="password_error">Minimum length is 5</string>
    <string name="password_match_error">Passwords should match</string>
    <string name="incorrect_email_id">Incorrect email</string>
    <string name="incorrect_password">Incorrect password</string>

    <!-- Child Sign Up-->
    <string name="child_sign_up_heading">Child</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="select_birth_date_button">Birth Date</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="title_activity_child_extracurriculars">Sign Up</string>
    <string name="activities_header">Activity</string>
    <string name="activities_question">Has your child done any activities before?</string>
    <string name="radio_yes">Yes</string>
    <string name="radio_no">No</string>
    <string name="select_activities">Select all previous activities</string>
    <string name="next_text">NEXT</string>
    <string name="finish_text">FINISH</string>

    <!-- Display Activity-->
    <string name="display_completed_activities_text">Display completed activities</string>
    <string name="title_activity_display">User Profile</string>
    
    <!--##################### AllActivities Database activities strings###########################-->
    <string name="Drama_and_Theatre">Drama and Theatre</string>
    <string name="Third_Language">Third Language</string>
    <string name="Chess">Chess</string>
    <string name="Computer_Programming">Computer Programming</string>
    <string name="Calligraphy">Calligraphy</string>
    <string name="Language_Classes">Language Classes</string>
    <string name="Writing_Classes">Writing Classes</string>
    <string name="Reading_Classes">Reading Classes</string>
    <string name="Mental_Maths">Mental Maths</string>
    <string name="Science_and_Robotics">Science and Robotics</string>
    <string name="Astronomy_Club">Astronomy Club</string>
    <string name="Badminton">Badminton</string>
    <string name="Archery">Archery</string>
    <string name="Basketball">Basketball</string>
    <string name="Swimming">Swimming</string>
    <string name="Tennis">Tennis</string>
    <string name="Martial_Arts">Martial Arts</string>
    <string name="Skating">Skating</string>
    <string name="Cycling">Cycling</string>
    <string name="cricket">Cricket</string>
    <string name="Football">Football</string>
    <string name="Art_and_Craft">Art and Craft</string>
    <string name="Cold_cooking">Cold cooking</string>
    <string name="Indian_Classical_Dance">Indian Classical Dance</string>
    <string name="Bollywood_Dance">Bollywood Dance</string>
    <string name="Guitar">Guitar</string>
    <string name="Piano">Piano</string>
    <string name="Violin">Violin</string>
    <string name="Singing">Singing</string>
    <string name="Golf">Golf</string>
    <string name="Speaking_Club">Speaking Club</string>
    <string name="Etiquettes_classes">Etiquette classes</string>
    <!-- #########################################################################################-->

</resources>
