<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivityFragment">

    <Button
        android:layout_width="312dp"
        android:layout_height="40dp"
        android:padding="@dimen/abc_button_padding_vertical_material"
        android:layout_above="@+id/sign_up_text_layout"
        android:id="@+id/sign_in_button"
        android:text="@string/sign_in"
        android:textColor="@color/textColorPrimary"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:id="@+id/sign_up_text_layout"
        android:layout_above="@+id/terms_text"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        android:paddingBottom="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_an_account_text"
            android:textColor="@color/textColorPrimary"
            android:theme="@style/Base.V21.Theme.AppCompat"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sign_up_button"
            android:text="@string/sign_up_text"
            android:textColor="@color/colorPrimaryLight"
            android:clickable="true" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/privacy_policy_text"
        android:id="@+id/terms_text"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_registering"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/abc_text_size_small_material"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_service"
            android:textColor="@color/colorPrimaryLight"
            android:clickable="true"
            android:textSize="@dimen/abc_text_size_small_material"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:id="@+id/privacy_policy_text"
        android:gravity="center_horizontal"
        android:paddingBottom="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/and"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/abc_text_size_small_material"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy"
            android:textColor="@color/colorPrimaryLight"
            android:clickable="true"
            android:textSize="@dimen/abc_text_size_small_material"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sign_in_button"
        android:orientation="vertical"
        android:id="@+id/text_field"
        android:gravity="center_horizontal"
        android:padding="8dp">

        <EditText
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:id="@+id/username_field"
            android:hint="@string/username_text"
            android:imeOptions="actionNext"
            android:singleLine="true"/>

        <EditText
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:id="@+id/password_field"
            android:hint="@string/password_text"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:singleLine="true"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/text_field"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:padding="4dp">

        <ImageButton
            android:layout_width="136dp"
            android:layout_height="40dp"
            android:src="@drawable/facebook_button"
            android:id="@+id/facebook_button"
            android:contentDescription="@string/facebook_button_description"/>

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content" />

        <ImageButton
            android:layout_width="136dp"
            android:layout_height="40dp"
            android:src="@drawable/google_plus_button"
            android:id="@+id/google_plus_button"
            android:contentDescription="@string/google_plus_description"/>

    </LinearLayout>

</RelativeLayout>
