<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dhruv.projectkid.ParentSignUpActivityFragment">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/toolbar_container">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_below="@+id/toolbar_container"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="32dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:id="@+id/text_parent"
                android:text="@string/parent_sign_up_heading"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/abc_text_size_headline_material"
                android:padding="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_name"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:gravity="center_vertical"
                android:layout_below="@+id/text_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_action_person"
                    android:paddingRight="16dp"
                    android:paddingLeft="16dp"/>

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/full_name"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:id="@+id/parent_full_name"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_phone"
                android:layout_below="@+id/layout_name"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_action_call"
                    android:paddingRight="16dp"
                    android:paddingLeft="16dp"/>

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:id="@+id/parent_phone_number"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_email"
                android:layout_below="@+id/layout_phone"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_action_email"
                    android:paddingRight="16dp"
                    android:paddingLeft="16dp"/>

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:id="@+id/parent_email"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_password"
                android:layout_below="@+id/layout_email"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_action_vpn_key"
                    android:paddingRight="16dp"
                    android:paddingLeft="16dp"/>

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:id="@+id/parent_password"/>
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_password"
                android:id="@+id/heading_child"
                android:text="@string/child_sign_up_heading"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/abc_text_size_headline_material"
                android:padding="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_name_child"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:gravity="center_vertical"
                android:layout_below="@+id/heading_child">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_action_person"
                    android:paddingRight="16dp"
                    android:paddingLeft="16dp"/>

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/full_name"
                    android:singleLine="true"
                    android:imeOptions="actionDone"
                    android:id="@+id/child_name"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_gender_birth_date_child"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:gravity="center_vertical"
                android:layout_below="@+id/layout_birth_date"
                android:paddingTop="8dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_gender_male_female_white_24dp"
                    android:paddingRight="16dp"
                    android:paddingLeft="16dp"/>

                <Spinner
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/gender_child"
                    android:id="@+id/child_spinner_gender"/>


            </LinearLayout>
            <!--<LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_gender_birth_date_child"
                android:id="@+id/layout_past_activities"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="16dp"
                    android:paddingLeft="16dp"
                    android:src="@drawable/ic_football_helmet_white_24dp"/>
                <Spinner
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/yes_no_string_array"
                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"/>
            </LinearLayout>-->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/layout_birth_date"
                android:gravity="center_vertical"
                android:layout_below="@+id/layout_name_child"
                android:paddingBottom="8dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_action_today"
                    android:paddingLeft="16dp"
                    android:paddingRight="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_birth_date_button"
                    android:textColor="@color/textColorPrimary"
                    android:paddingBottom="4dp"
                    android:clickable="true"
                    android:id="@+id/birth_date_text_view"
                    android:textSize="@dimen/abc_text_size_medium_material" />

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>
